crates/analyzer/tests/snapshots/analysis__revert.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ revert.fe:4:5
  │
4 │     pub msg: u256
  │     ^^^^^^^^^^^^^ u256
5 │     pub val: bool
  │     ^^^^^^^^^^^^^ bool

note: 
  ┌─ revert.fe:8:5
  │
8 │     my_other_error: OtherError
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError

note: 
   ┌─ revert.fe:10:5
   │  
10 │ ╭     pub fn bar() -> u256:
11 │ │         revert
   │ ╰──────────────^ attributes hash: 6115314201970082834
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
   ┌─ revert.fe:13:5
   │  
13 │ ╭     pub fn revert_custom_error(ctx: Context):
14 │ │         ctx.send_value(to: address(0), wei: 100)
   │ ╰────────────────────────────────────────────────^ attributes hash: 5519676733853656531
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: Some(
             Mutable,
         ),
         params: [
             FunctionParam {
                 label: None,
                 name: "ctx",
                 typ: Ok(
                     Struct(
                         Struct {
                             name: "Context",
                             field_count: 0,
                         },
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Unit,
             ),
         ),
     }

note: 
   ┌─ revert.fe:14:9
   │
14 │         ctx.send_value(to: address(0), wei: 100)
   │         ^^^                        ^ u256: Value
   │         │                           
   │         Context: Memory

note: 
   ┌─ revert.fe:14:28
   │
14 │         ctx.send_value(to: address(0), wei: 100)
   │                            ^^^^^^^^^^       ^^^ u256: Value
   │                            │                 
   │                            address: Value

note: 
   ┌─ revert.fe:14:9
   │
14 │         ctx.send_value(to: address(0), wei: 100)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ (): Value

note: 
   ┌─ revert.fe:16:5
   │  
16 │ ╭     pub fn revert_other_error():
17 │ │         revert OtherError(msg: 1, val: true)
   │ ╰────────────────────────────────────────────^ attributes hash: 8319796915330632390
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Unit,
             ),
         ),
     }

note: 
   ┌─ revert.fe:17:32
   │
17 │         revert OtherError(msg: 1, val: true)
   │                                ^       ^^^^ bool: Value
   │                                │        
   │                                u256: Value

note: 
   ┌─ revert.fe:17:16
   │
17 │         revert OtherError(msg: 1, val: true)
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Memory

note: 
   ┌─ revert.fe:19:5
   │  
19 │ ╭     pub fn revert_other_error_from_sto(self):
20 │ │         self.my_other_error = OtherError(msg: 1, val: true)
21 │ │         revert self.my_other_error.to_mem()
   │ ╰───────────────────────────────────────────^ attributes hash: 18235041182630809162
   │  
   = FunctionSignature {
         self_decl: Some(
             Mutable,
         ),
         ctx_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Unit,
             ),
         ),
     }

note: 
   ┌─ revert.fe:20:9
   │
20 │         self.my_other_error = OtherError(msg: 1, val: true)
   │         ^^^^ Foo: Value

note: 
   ┌─ revert.fe:20:9
   │
20 │         self.my_other_error = OtherError(msg: 1, val: true)
   │         ^^^^^^^^^^^^^^^^^^^                   ^       ^^^^ bool: Value
   │         │                                     │        
   │         │                                     u256: Value
   │         OtherError: Storage { nonce: Some(0) }

note: 
   ┌─ revert.fe:20:31
   │
20 │         self.my_other_error = OtherError(msg: 1, val: true)
   │                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Memory
21 │         revert self.my_other_error.to_mem()
   │                ^^^^ Foo: Value

note: 
   ┌─ revert.fe:21:16
   │
21 │         revert self.my_other_error.to_mem()
   │                ^^^^^^^^^^^^^^^^^^^ OtherError: Storage { nonce: Some(0) }

note: 
   ┌─ revert.fe:21:16
   │
21 │         revert self.my_other_error.to_mem()
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Storage { nonce: Some(0) } => Memory


